# mbwm2

./: .gitignore  ChangeLog  Makefile  Makefile.am  README  TODO  configure.ac  matchbox-window-manager-2.c  matchbox-window-manager-2.doap  mb-wm-atoms.c  mb-wm-client.c  mb-wm-client.h  mb-wm-core.c  mb-wm-core.h  mb-wm-layout-manager.c  mb-wm-layout.h  mb-wm-props.c  mb-wm-props.h  mb-wm-stack.c  mb-wm-types.h  mb-wm-util.c  mb-wm-util.h  mb-wm.h  xas.c
data/: Makefile.am  libmatchbox2.pc.in
data/themes/: Makefile.am  README
data/themes/Default/: theme.xml
data/themes/PngSample/: theme.xml
doc/: MBWM2-Overview.xml  Makefile.am
matchbox/: Makefile.am  mb-wm-config.h.in
matchbox/client-types/: Makefile.am  mb-wm-client-app.c  mb-wm-client-desktop.c  mb-wm-client-dialog.c  mb-wm-client-dialog.h  mb-wm-client-input.c  mb-wm-client-menu.c  mb-wm-client-panel.c
matchbox/comp-mgr/: Makefile.am  mb-wm-comp-mgr-clutter.c  mb-wm-comp-mgr-clutter.h  mb-wm-comp-mgr-default.c  mb-wm-comp-mgr-default.h  mb-wm-comp-mgr-xrender.c  mb-wm-comp-mgr.c  mb-wm-comp-mgr.h
matchbox/core/: Makefile.am  mb-window-manager.c  mb-window-manager.h  mb-wm-atoms.c  mb-wm-client-base.c  mb-wm-client-window.c  mb-wm-client-window.h  mb-wm-client.c  mb-wm-client.h  mb-wm-debug.c  mb-wm-debug.h  mb-wm-decor.c  mb-wm-decor.h  mb-wm-keys.c  mb-wm-layout.c  mb-wm-layout.h  mb-wm-macros.h  mb-wm-main-context.c  mb-wm-main-context.h  mb-wm-object.c  mb-wm-object.h  mb-wm-root-window.c  mb-wm-stack.c  mb-wm-stack.h  mb-wm-types.h  mb-wm-util.h  mb-wm.h  xas.c
matchbox/managers/maemo/: Makefile.am  maemo-input.c  maemo-input.h  maemo-toolbar.c  maemo-toolbar.h  maemo-window-manager.c  maemo-window-manager.h  matchbox-window-manager-2-maemo.c
matchbox/managers/maemo/theme/: theme.xml
matchbox/managers/simple/: Makefile.am  matchbox-window-manager-2-simple.c
matchbox/theme-engines/: Makefile.am  mb-wm-theme-cairo.c  mb-wm-theme-cairo.h  mb-wm-theme-png.c  mb-wm-theme-png.h  mb-wm-theme-simple.h  mb-wm-theme-xml.c  mb-wm-theme-xml.h  mb-wm-theme.c  mb-wm-theme.h
src/: Makefile.am  matchbox-window-manager-2.c
src/client-types/: Makefile.am  mb-wm-client-app.c  mb-wm-client-app.h  mb-wm-client-desktop.c  mb-wm-client-desktop.h  mb-wm-client-dialog.c  mb-wm-client-dialog.h  mb-wm-client-input.c  mb-wm-client-input.h  mb-wm-client-menu.c  mb-wm-client-menu.h  mb-wm-client-note.c  mb-wm-client-note.h  mb-wm-client-override.c  mb-wm-client-override.h  mb-wm-client-panel.c  mb-wm-client-panel.h
src/comp-mgr/: Makefile.am  mb-wm-comp-mgr-clutter.c  mb-wm-comp-mgr-clutter.h  mb-wm-comp-mgr-default.c  mb-wm-comp-mgr-default.h  mb-wm-comp-mgr.c  mb-wm-comp-mgr.h
src/core/: Makefile.am  mb-window-manager.c  mb-window-manager.h  mb-wm-atoms.c  mb-wm-client-base.c  mb-wm-client-base.h  mb-wm-client-window.c  mb-wm-client-window.h  mb-wm-client.c  mb-wm-client.h  mb-wm-core.c  mb-wm-core.h  mb-wm-debug.c  mb-wm-debug.h  mb-wm-decor.c  mb-wm-decor.h  mb-wm-keys.c  mb-wm-keys.h  mb-wm-layout.c  mb-wm-layout.h  mb-wm-macros.h  mb-wm-main-context.c  mb-wm-main-context.h  mb-wm-object-props.h  mb-wm-object.c  mb-wm-object.h  mb-wm-props.c  mb-wm-props.h  mb-wm-root-window.c  mb-wm-root-window.h  mb-wm-stack.c  mb-wm-stack.h  mb-wm-types.h  mb-wm-util.c  mb-wm-util.h  mb-wm-window.c  mb-wm-window.h  mb-wm.h  xas.c
src/managers/: Makefile.am  matchbox-window-manager-2-simple.c
src/managers/maemo/: Makefile.am  maemo-input.c  maemo-input.h  maemo-toolbar.c  maemo-toolbar.h  maemo-window-manager.c  maemo-window-manager.h  matchbox-window-manager-2-maemo.c
src/managers/maemo/theme/: Makefile.am  theme.xml
src/managers/simple/: Makefile.am  matchbox-window-manager-2-simple.c
src/theme-engines/: Makefile.am  mb-wm-theme-cairo.c  mb-wm-theme-cairo.h  mb-wm-theme-png.c  mb-wm-theme-png.h  mb-wm-theme-private.h  mb-wm-theme-simple.c  mb-wm-theme-simple.h  mb-wm-theme-xml.c  mb-wm-theme-xml.h  mb-wm-theme.c  mb-wm-theme.h  theme-cairo.c  theme-simple.c
util/: Makefile.am
