noinst_LIBRARIES = libmatchbox-window-manager-2-compmgr.a

core_h  = mb-wm-comp-mgr.h		\
	  mb-wm-comp-mgr-default.h

core_c  = mb-wm-comp-mgr.c 		\
	  mb-wm-comp-mgr-default.c

libmatchbox_window_manager_2_compmgr_a_SOURCES = $(core_h) $(core_c)
libmatchbox_window_manager_2_compmgr_a_CFLAGS = @MBWM_INCS@ @MBWM_CFLAGS@

MAINTAINERCLEANFILES = Makefile.in